@@ -14,6 +14,8 @@ TODO: more stuff here!
 
  * Move to Autotools (Automake, Autoconf) for building
 
+ * Added simple script ("build.sh") for automating tedious builds (w32 for now)
+
  * Detect if running in "installed" or "portable" mode
    * Uses xdg or platform-specific paths when installed
    * Automatic detection and paths can be overridden by invocation arguments
